tests/ui/macros/issue-16098.stderr
error: recursion limit reached while expanding `prob1!`
  --> $DIR/issue-16098.rs:7:18
   |
LL | / macro_rules! prob1 {
LL | |     (0) => {
LL | |         0
LL | |     };
...  |
LL | |             $n + prob1!($n - 1);
   | |                  ^^^^^^^^^^^^^^ in this macro invocation (#2)
...  |
LL | |     };
LL | | }
   | | -
   | | |
   | |_in this expansion of `prob1!` (#1)
   |   in this expansion of `prob1!` (#2)
...
LL |       println!("Problem 1: {}", prob1!(1000));
   |                                 ------------ in this macro invocation (#1)
   |
   = help: consider increasing the recursion limit by adding a `#![recursion_limit = "256"]` attribute to your crate (`issue_16098`)

error: aborting due to previous error

